--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -494,31 +494,58 @@ jobs:
         run: |
           echo "🔍 Verificando firmas de la imagen..."
 
-          IMAGE_REF="${{ env.REGISTRY }}/${{ github.repository }}/devcontainer-${{ matrix.image }}:${{ github.ref_name }}-${{ github.sha }}"
+          # Usar los tags generados por metadata-action
+          TAGS=($(echo '${{ steps.meta.outputs.tags }}' | tr ',' '\n'))
+          
+          # Usar el primer tag como referencia principal para verificación
+          MAIN_TAG="${TAGS[0]}"
+          
+          if [[ -z "$MAIN_TAG" || "$MAIN_TAG" == " " ]]; then
+            echo "❌ No se encontró un tag válido para verificar"
+            exit 1
+          fi
+          
+          echo "🔍 Verificando firma para: $MAIN_TAG"
 
-          # Verificar firma
-          cosign verify \
-            --certificate-identity-regexp="^https://github.com/${{ github.repository }}" \
-            --certificate-oidc-issuer="https://token.actions.githubusercontent.com" \
-            "$IMAGE_REF" || {
-              echo "❌ Verificación de firma fallida"
-              exit 1
-            }
-
-          echo "✅ Firma verificada exitosamente"
+          # Verificar firma con retry logic
+          for attempt in {1..3}; do
+            if cosign verify \
+              --certificate-identity-regexp="^https://github.com/${{ github.repository }}" \
+              --certificate-oidc-issuer="https://token.actions.githubusercontent.com" \
+              "$MAIN_TAG"; then
+              echo "✅ Firma verificada exitosamente para: $MAIN_TAG"
+              break
+            else
+              echo "⚠️ Intento $attempt fallido para verificar firma"
+              if [[ $attempt -eq 3 ]]; then
+                echo "❌ Verificación de firma fallida después de 3 intentos"
+                exit 1
+              fi
+              sleep $((attempt * 2))
+            fi
+          done
 
           # Verificar SBOM
-          echo "🔍 Verificando SBOM..."
-          cosign verify-attestation \
-            --certificate-identity-regexp="^https://github.com/${{ github.repository }}" \
-            --certificate-oidc-issuer="https://token.actions.githubusercontent.com" \
-            --type spdxjson --output-file sbom-attestation-${{ matrix.image }}.json \
-            "$IMAGE_REF" || {
-              echo "❌ Verificación de SBOM fallida"
-              exit 1
-            }
+          echo "🔍 Verificando SBOM para: $MAIN_TAG"
+          for attempt in {1..3}; do
+            if cosign verify-attestation \
+              --certificate-identity-regexp="^https://github.com/${{ github.repository }}" \
+              --certificate-oidc-issuer="https://token.actions.githubusercontent.com" \
+              --type spdxjson --output-file sbom-attestation-${{ matrix.image }}.json \
+              "$MAIN_TAG"; then
+              echo "✅ SBOM verificado exitosamente para: $MAIN_TAG"
+              break
+            else
+              echo "⚠️ Intento $attempt fallido para verificar SBOM"
+              if [[ $attempt -eq 3 ]]; then
+                echo "❌ Verificación de SBOM fallida después de 3 intentos"
+                exit 1
+              fi
+              sleep $((attempt * 2))
+            fi
+          done
 
-          echo "✅ SBOM verificado exitosamente"
+          echo "✅ Verificación completa exitosa"
 
   integration-tests:
     name: 'Integration Tests'
