--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -483,6 +483,70 @@ jobs:
 
           echo "✅ SBOM generado y atestado para todas las tags"
 
+      - name: 'Verify image signature'
+        if: |
+          steps.should_build.outputs.build == 'true' &&
+          (github.ref == 'refs/heads/main' ||
+           github.ref == 'refs/heads/develop' ||
+           github.event.inputs.push_images == 'true')
+        env:
+          COSIGN_EXPERIMENTAL: 1
+        run: |
+          echo "🔍 Verificando firmas de la imagen..."
+
+          # Usar los tags generados por metadata-action
+          TAGS=($(echo '${{ steps.meta.outputs.tags }}' | tr ',' '\n'))
+          
+          # Usar el primer tag como referencia principal para verificación
+          MAIN_TAG="${TAGS[0]}"
+          
+          if [[ -z "$MAIN_TAG" || "$MAIN_TAG" == " " ]]; then
+            echo "❌ No se encontró un tag válido para verificar"
+            exit 1
+          fi
+          
+          echo "🔍 Verificando firma para: $MAIN_TAG"
+
+          # Verificar firma con retry logic
+          for attempt in {1..3}; do
+            if cosign verify \
+              --certificate-identity-regexp="^https://github.com/${{ github.repository }}" \
+              --certificate-oidc-issuer="https://token.actions.githubusercontent.com" \
+              "$MAIN_TAG"; then
+              echo "✅ Firma verificada exitosamente para: $MAIN_TAG"
+              break
+            else
+              echo "⚠️ Intento $attempt fallido para verificar firma"
+              if [[ $attempt -eq 3 ]]; then
+                echo "❌ Verificación de firma fallida después de 3 intentos"
+                exit 1
+              fi
+              sleep $((attempt * 2))
+            fi
+          done
+
+          # Verificar SBOM
+          echo "🔍 Verificando SBOM para: $MAIN_TAG"
+          for attempt in {1..3}; do
+            if cosign verify-attestation \
+              --certificate-identity-regexp="^https://github.com/${{ github.repository }}" \
+              --certificate-oidc-issuer="https://token.actions.githubusercontent.com" \
+              --type spdxjson --output-file sbom-attestation-${{ matrix.image }}.json \
+              "$MAIN_TAG"; then
+              echo "✅ SBOM verificado exitosamente para: $MAIN_TAG"
+              break
+            else
+              echo "⚠️ Intento $attempt fallido para verificar SBOM"
+              if [[ $attempt -eq 3 ]]; then
+                echo "❌ Verificación de SBOM fallida después de 3 intentos"
+                exit 1
+              fi
+              sleep $((attempt * 2))
+            fi
+          done
+
+          echo "✅ Verificación completa exitosa"
+
   integration-tests:
     name: 'Integration Tests'
     runs-on: ubuntu-latest
