--- a/images/go/Dockerfile
+++ b/images/go/Dockerfile
@@ -8,6 +8,7 @@ FROM golang:${GO_VERSION}-alpine${ALPINE_VERSION} AS builder
 # Install build dependencies and tools
 RUN apk add --no-cache \
     git=2.49.1-r0 \
+    curl=8.14.1-r1 \
     ca-certificates=20250619-r0 \
     gcc=14.2.0-r6 \
     musl-dev=1.2.5-r10 \
@@ -25,6 +26,15 @@ RUN go install golang.org/x/tools/gopls@latest && \
     go install gotest.tools/gotestsum@latest && \
     go install github.com/securego/gosec/v2/cmd/gosec@latest
 
+# Download and verify GitHub CLI version
+ARG GH_CLI_VERSION=2.76.1
+
+# Download GitHub CLI
+RUN curl -fsSL https://github.com/cli/cli/releases/download/v${GH_CLI_VERSION}/gh_${GH_CLI_VERSION}_linux_amd64.tar.gz -o gh.tar.gz \
+    && tar -xzf gh.tar.gz \
+    && chmod +x gh_${GH_CLI_VERSION}_linux_amd64/bin/gh \
+    && mv gh_${GH_CLI_VERSION}_linux_amd64/bin/gh /tmp
+
 # Production stage
 ARG GO_VERSION=1.24
 ARG ALPINE_VERSION=3.22
@@ -37,13 +47,20 @@ RUN apk add --no-cache \
     ca-certificates=20250619-r0 \
     bash=5.2.37-r0 \
     make=4.4.1-r3 \
+    docker=28.3.0-r0 \
+    docker-cli=28.3.0-r0 \
+    openrc=0.62.6-r0 \
     && update-ca-certificates
+
+# Add docker to boot
+RUN rc-update add docker boot
 
 # Create non-root user
 RUN addgroup -S gopher && adduser -S gopher -G gopher -u 1001
 
 # Copy Go tools from builder
 COPY --from=builder /go/bin/* /usr/local/bin/
+COPY --from=builder /tmp/gh /usr/local/bin/gh
 
 # Set Go environment variables
 ENV CGO_ENABLED=0
